--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/firebase-adapter": "^2.9.0",
+    "firebase": "^11.6.1",
+    "firebase-admin": "^12.0.0",
     "next": "^15.3.1",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "papaparse": "^5.5.2",
     "react": "^19.1.0",
