--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/firebase-adapter": "^2.9.0",
+    "@vercel/speed-insights": "^1.2.0",
     "firebase": "^11.6.1",
     "firebase-admin": "^12.0.0",
     "next": "^15.3.1",
