--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/firebase-adapter": "^2.9.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "date-fns": "^4.1.0",
     "firebase": "^11.6.1",
     "firebase-admin": "^12.0.0",
     "next": "^15.3.1",
@@ -34,6 +35,7 @@
     "eslint-config-next": "15.3.1",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.5",
-    "typescript": "^5"
+    "typescript": "^5",
+    "uuid": "^11.1.0"
   }
 }
