--- a/package.json
+++ b/package.json
@@ -9,14 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/firebase-adapter": "^2.9.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
-    "date-fns": "^4.1.0",
-    "firebase": "^11.6.1",
-    "firebase-admin": "^12.0.0",
     "next": "^15.3.1",
-    "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "papaparse": "^5.5.2",
     "react": "^19.1.0",
@@ -35,7 +30,6 @@
     "eslint-config-next": "15.3.1",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.5",
-    "typescript": "^5",
-    "uuid": "^11.1.0"
+    "typescript": "^5"
   }
 }
