--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.46.0",
+    "@typescript-eslint/parser": "^8.46.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
-    "next": "^15.3.1",
+    "next": "^15.5.4",
     "next-themes": "^0.4.6",
     "papaparse": "^5.5.2",
     "react": "^19.1.0",
@@ -21,15 +23,15 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.5",
-    "@types/node": "^22",
+    "@types/node": "^24.7.0",
     "@types/papaparse": "^5.3.15",
-    "@types/react": "^19",
+    "@types/react": "^19.2.0",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9",
+    "eslint": "^9.37.0",
     "eslint-config-next": "15.3.1",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.5",
-    "typescript": "^5"
+    "typescript": "^5.9.3"
   }
 }
