--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
+    "dotenv": "^17.2.3",
     "eslint": "^9.37.0",
     "eslint-config-next": "15.3.1",
     "postcss": "^8.5.3",
