--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@typescript-eslint/parser": "^8.46.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "framer-motion": "^12.26.1",
     "next": "^15.5.4",
     "next-themes": "^0.4.6",
     "papaparse": "^5.5.2",
