--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/pg-adapter": "^1.11.1",
+    "@neondatabase/serverless": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^8.46.0",
     "@typescript-eslint/parser": "^8.46.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "framer-motion": "^12.26.1",
     "next": "^16.1.3",
+    "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.6",
     "papaparse": "^5.5.3",
     "react": "^19.1.0",
